# term-color

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  ansi_color.hh  collapse.hh  color_tools.hh  colors.h
test/: test.cc
